# pvlink

./: .gitignore  LICENSE  README.md  compose.dev.yaml  domains.txt  init.sh
env/: init.conf.template
env/dev/: down.sh  init-tls.sh  rebuild.sh  up.sh
env/dev/restart/: analytic.sh  backend.sh  db.sh  frontend.sh  purger.sh  shortener.sh
env/template/: traefik-dynamic.yaml.template  traefik.yaml.template
source/analytic/: Cargo.toml
source/analytic/src/: app.rs  config.rs  constants.rs  geo.rs  main.rs
source/backend/: Dockerfile  package.json
source/backend/src/: auth.ts  cache.ts  db.ts  main.ts
source/db/: Dockerfile  init.sql
source/db/dev/: insert-link.sh
source/frontend/: Dockerfile  index.html  package.json  vite.config.ts
source/frontend/src/: App.vue  api.ts  auth.ts  main.ts  style.css
source/frontend/src/components/: Button.vue  TitleBar.vue
source/frontend/src/pages/: AddLink.vue  Dashboard.vue  Home.vue  Link.vue  Login.vue
source/purger/: Cargo.toml
source/purger/src/: app.rs  config.rs  constants.rs  main.rs
source/shortener/: Cargo.toml  Dockerfile
source/shortener/src/: app.rs  config.rs  constants.rs  log.rs
source/traefik/: .gitignore  Dockerfile
