[package]
name = "analytic"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
file-rotate = "0.8.0"
flate2 = "1.1.4"
nats = "0.25.0"
redis = { version = "0.32.7", features = ["tokio-comp"] }
reqwest = "0.12.24"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.48.0", features = ["full"] }
